moved JQuery templating functions from kendra_search.hooks.inc to kendra_search_service.module modified templating functions to allow template loading on demand rather than requiring them in the page patched json_server to fix bug mentioned at http://drupal.org/node/252783 added hooks to clear template cache when kendra_search module is enabled or disabled require 'administer nodes' permission to use the services (as per '#access arguments'); should adjust to fit later fetch templates from server using JQuery.get() rather than Drupal.Service (simpler) refer to composited template from within wrapper template using template name rather than ID

--- a/profiles/kendra_signpost/modules/features/kendra_search/js/tmpl/smart_filter_wrapper.tmpl.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/js/tmpl/smart_filter_wrapper.tmpl.html
@@ -1,4 +1,4 @@
 <table id="kendra-smart-filters" class="kendra-filter-rule views-table">
-{{tmpl(rules) "#smart-filter-row-tmpl"}}
+{{tmpl(rules) "smart_filter_row.tmpl.html"}}
 </table>
 <div class="right"><div id="kendra-search-result"><div id="kendra-search-navigation"><ul id="kendra-search-pager"></ul><div id="kendra-search-pager-header"></div></div><div id="kendra-search-docs"></div></div></div>
