added fields to request list ("fl")

--- a/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
@@ -144,7 +144,7 @@
 <input type="text" name="fq" id="fq" value="" />
 </div>
 <div class="field"><label for="fl">fl</label>
-<input type="text" name="fl" id="fl" value="title,ss_cck_field_cat_rowuri,ss_cck_field_cat_artist,ss_cck_field_cat_album,path,timestamp" />
+<input type="text" name="fl" id="fl" value="id,title,path,ss_cck_field_cat_album,ss_cck_field_cat_artist,ss_cck_field_cat_rowuri,timestamp" />
 </div>
 
 <div><label for=""></label>
