added test qt param

--- a/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
@@ -98,6 +98,7 @@
 <option value="standard">standard</option>
 <option value="partitioned">partitioned</option>
 <option value="/debug/dump">/debug/dump</option>
+<option value="lucene">lucene</option>
 </select>
 </div>
 <div class="field"><label for="facet">facet</label>
