added 'edismax' handler pretty-print whitespace

--- a/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
@@ -5,154 +5,157 @@
 <base href="http://dev.signpost.kendra.org.uk/" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="shortcut icon" href="/misc/favicon.ico" type="image/x-icon" />
-    <link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/admin_menu/admin_menu.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/cck/theme/content-module.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/ctools/css/ctools.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/filefield/filefield.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/cck/modules/fieldgroup/fieldgroup.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/views/css/views.css?n" />
-<link type="text/css" rel="stylesheet" media="all" href="/profiles/kendra_signpost/modules/contrib/vertical_tabs/vertical_tabs.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/admin_menu/admin_menu.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/cck/theme/content-module.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/ctools/css/ctools.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/filefield/filefield.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/features/kendra_search/css/kendra_search.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/cck/modules/fieldgroup/fieldgroup.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/views/css/views.css?n" />
+<link type="text/css" rel="stylesheet" media="all"
+	href="/profiles/kendra_signpost/modules/contrib/vertical_tabs/vertical_tabs.css?n" />
 
-<link type="text/css" rel="stylesheet" media="screen" href="/profiles/kendra_signpost/themes/tao/reset.css?n" />
-<link type="text/css" rel="stylesheet" media="screen" href="/profiles/kendra_signpost/themes/tao/drupal.css?n" />
-<link type="text/css" rel="stylesheet" media="screen" href="/profiles/kendra_signpost/themes/tao/base.css?n" />
-<link type="text/css" rel="stylesheet" media="screen" href="/profiles/kendra_signpost/themes/rubik/core.css?n" />
-<link type="text/css" rel="stylesheet" media="screen" href="/profiles/kendra_signpost/themes/rubik/icons.css?n" />
-<link type="text/css" rel="stylesheet" media="screen" href="/profiles/kendra_signpost/themes/rubik/style.css?n" />
+<link type="text/css" rel="stylesheet" media="screen"
+	href="/profiles/kendra_signpost/themes/tao/reset.css?n" />
+<link type="text/css" rel="stylesheet" media="screen"
+	href="/profiles/kendra_signpost/themes/tao/drupal.css?n" />
+<link type="text/css" rel="stylesheet" media="screen"
+	href="/profiles/kendra_signpost/themes/tao/base.css?n" />
+<link type="text/css" rel="stylesheet" media="screen"
+	href="/profiles/kendra_signpost/themes/rubik/core.css?n" />
+<link type="text/css" rel="stylesheet" media="screen"
+	href="/profiles/kendra_signpost/themes/rubik/icons.css?n" />
+<link type="text/css" rel="stylesheet" media="screen"
+	href="/profiles/kendra_signpost/themes/rubik/style.css?n" />
 
 <style type="text/css">
 #queryform {
-    width:300px;
-    border:1px solid #999999;
-    background-color:#bbbbbb;
-    border-radius:10px;
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
-    position:static;
-    top:10px;
-    left:10px;
-    padding:10px;
-    margin:5px;
+	width: 300px;
+	border: 1px solid #999999;
+	background-color: #bbbbbb;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	position: static;
+	top: 10px;
+	left: 10px;
+	padding: 10px;
+	margin: 5px;
 }
-#queryform input, #queryform select {
-    margin:2px;
-    padding:2px;
-    border:1px solid #cccccc;
-    background-color:#eeeeee;
+
+#queryform input,#queryform select {
+	margin: 2px;
+	padding: 2px;
+	border: 1px solid #cccccc;
+	background-color: #eeeeee;
 }
+
 #queryform label {
-    display:block;
-    float:left;
-    font-weight:bold;
-    padding-right:10px;
-    width:100px;
+	display: block;
+	float: left;
+	font-weight: bold;
+	padding-right: 10px;
+	width: 100px;
 }
 
 #output {
-    border:1px solid #cccccc;
-    border-radius:10px;
-    -webkit-border-radius:10px;
-    -moz-border-radius:10px;
-    width:1000px;
-    height:95%;
-    position:absolute;
-    top:10px;
-    left:340px;
-    padding:10px;
-    overflow:auto;
+	border: 1px solid #cccccc;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	width: 1000px;
+	height: 95%;
+	position: absolute;
+	top: 10px;
+	left: 340px;
+	padding: 10px;
+	overflow: auto;
 }
 
 #extraoptions {
+	
 }
-
 </style>
 
 </head>
 <body>
-<form id="queryform" action="/solr/dev/select" method="GET" target="output">
-<div class="field"><label for="jsonnl">json.nl</label>
-<input type="text" name="json.nl" id="jsonnl" value="map" />
-</div>
-<div class="field"><label for="wt">wt</label>
-<select name="wt" id="wt">
-<option value="json" selected="selected">json</option>
-<option value="xml">xml</option>
-<option value="python">python</option>
-<option value="ruby">ruby</option>
-<option value="php">php</option>
-<option value="phps">phps</option>
-</select>
-</div>
-<div class="field"><label for="indent">indent</label>
-<select name="indent" id="indent">
-<option value="true" selected="selected">true</option>
-<option value="false">false</option>
-</select>
-</div>
-<div class="field"><label for="qt">qt</label>
-<select name="qt" id="qt">
-<option value="dismax" selected="selected">dismax</option>
-<option value="standard">standard</option>
-<option value="partitioned">partitioned</option>
-<option value="/debug/dump">/debug/dump</option>
-<option value="lucene">lucene</option>
-</select>
-</div>
-<div class="field"><label for="facet">facet</label>
-<select name="facet" id="facet">
-<option value="true" selected="selected">true</option>
-<option value="false">false</option>
-</select>
-</div>
+<form id="queryform" action="/solr/dev/select" method="GET"
+	target="output">
+<div class="field"><label for="jsonnl">json.nl</label> <input
+	type="text" name="json.nl" id="jsonnl" value="map" /></div>
+<div class="field"><label for="wt">wt</label> <select name="wt"
+	id="wt">
+	<option value="json" selected="selected">json</option>
+	<option value="xml">xml</option>
+	<option value="python">python</option>
+	<option value="ruby">ruby</option>
+	<option value="php">php</option>
+	<option value="phps">phps</option>
+</select></div>
+<div class="field"><label for="indent">indent</label> <select
+	name="indent" id="indent">
+	<option value="true" selected="selected">true</option>
+	<option value="false">false</option>
+</select></div>
+<div class="field"><label for="qt">qt</label> <select name="qt"
+	id="qt">
+	<option value="edismax" selected="selected">edismax</option>
+	<option value="dismax">dismax</option>
+	<option value="standard">standard</option>
+	<option value="partitioned">partitioned</option>
+	<option value="/debug/dump">/debug/dump</option>
+	<option value="lucene">lucene</option>
+</select></div>
+<div class="field"><label for="facet">facet</label> <select
+	name="facet" id="facet">
+	<option value="true" selected="selected">true</option>
+	<option value="false">false</option>
+</select></div>
 <div class="field"><label for="facetmissing">facet.missing</label>
 <select name="facet.missing" id="facetmissing">
-<option value="true" selected="selected">true</option>
-<option value="false">false</option>
-</select>
-</div>
-<div class="field"><label for="facet.limit">facet.limit</label>
-<input type="text" name="facet.limit" id="facet.limit" value="100" />
-</div>
-<div class="field"><label for="rows">rows</label>
-<input type="text" name="rows" id="rows" value="100" />
+	<option value="true" selected="selected">true</option>
+	<option value="false">false</option>
+</select></div>
+<div class="field"><label for="facet.limit">facet.limit</label> <input
+	type="text" name="facet.limit" id="facet.limit" value="100" /></div>
+<div class="field"><label for="rows">rows</label> <input
+	type="text" name="rows" id="rows" value="100" /></div>
+
+<div class="field"><label for="q">q</label> <input type="text"
+	name="q" id="q" value="" /></div>
+<div class="field"><label for="qalt">q.alt</label> <input
+	type="text" name="q.alt" id="qalt" value="*:*" /></div>
+<div class="field"><label for="fq">fq</label> <input type="text"
+	name="fq" id="fq" value="type:kendra_cat" /></div>
+<div class="field"><label for="fq">fq</label> <input type="text"
+	name="fq" id="fq" value="" /></div>
+<div class="field"><label for="fq">fq</label> <input type="text"
+	name="fq" id="fq" value="" /></div>
+<div class="field"><label for="fq">fq</label> <input type="text"
+	name="fq" id="fq" value="" /></div>
+<div class="field"><label for="fq">fq</label> <input type="text"
+	name="fq" id="fq" value="" /></div>
+<div class="field"><label for="fq">fq</label> <input type="text"
+	name="fq" id="fq" value="" /></div>
+<div class="field"><label for="fl">fl</label> <input type="text"
+	name="fl" id="fl"
+	value="id,title,path,ss_cck_field_cat_album,ss_cck_field_cat_artist,ss_cck_field_cat_rowuri,timestamp" />
 </div>
 
-<div class="field"><label for="q">q</label>
-<input type="text" name="q" id="q" value="" />
-</div>
-<div class="field"><label for="qalt">q.alt</label>
-<input type="text" name="q.alt" id="qalt" value="*:*" />
-</div>
-<div class="field"><label for="fq">fq</label>
-<input type="text" name="fq" id="fq" value="type:kendra_cat" />
-</div>
-<div class="field"><label for="fq">fq</label>
-<input type="text" name="fq" id="fq" value="" />
-</div>
-<div class="field"><label for="fq">fq</label>
-<input type="text" name="fq" id="fq" value="" />
-</div>
-<div class="field"><label for="fq">fq</label>
-<input type="text" name="fq" id="fq" value="" />
-</div>
-<div class="field"><label for="fq">fq</label>
-<input type="text" name="fq" id="fq" value="" />
-</div>
-<div class="field"><label for="fq">fq</label>
-<input type="text" name="fq" id="fq" value="" />
-</div>
-<div class="field"><label for="fl">fl</label>
-<input type="text" name="fl" id="fl" value="id,title,path,ss_cck_field_cat_album,ss_cck_field_cat_artist,ss_cck_field_cat_rowuri,timestamp" />
-</div>
+<div><label for=""></label> <input type="submit" /></div>
 
-<div><label for=""></label>
-<input type="submit" />
-</div>
-
-<div><a href="http://wiki.apache.org/solr/SimpleFacetParameters#Parameters" target="_blank">help</a></div>
+<div><a
+	href="http://wiki.apache.org/solr/SimpleFacetParameters#Parameters"
+	target="_blank">help</a></div>
 </form>
 
 <!--
@@ -170,6 +173,6 @@
 <!--
 <script type="text/javascript" src="/misc/jquery.js"></script>
 -->
-    
+
 </body>
 </html>
