fixed initialization of form builder on "Create Smart Filter" page

--- a/profiles/kendra_signpost/modules/features/kendra_search/js/tmpl/smart_filter_wrapper.tmpl.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/js/tmpl/smart_filter_wrapper.tmpl.html
@@ -1,4 +1,8 @@
 <table id="kendra-smart-filters" class="kendra-filter-rule views-table">
+{{if typeof rules != 'undefined'}}
 {{tmpl(rules) "smart_filter_row.tmpl.html"}}
+{{else}}
+{{tmpl({'op1':null,'op2':null,'op3':null}) "smart_filter_row.tmpl.html"}}
+{{/if}}
 </table>
 <div class="right"><div id="kendra-search-result"><div id="kendra-search-navigation"><ul id="kendra-search-pager"></ul><div id="kendra-search-pager-header"></div></div><div id="kendra-search-docs"></div></div></div>
