--- a/profiles/kendra_signpost/modules/features/kendra_search/js/tmpl/smart_filter_row.tmpl.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/js/tmpl/smart_filter_row.tmpl.html
@@ -21,9 +21,9 @@
 <td class="kendra-filter-op2-wrapper">
 	<select class="kendra-filter-op2" name="op2">
 	{{if typeof op1 != 'undefined' && typeof Kendra.mapping.mappings[op1] != 'undefined' && typeof Kendra.mapping.mappings[op1].dataType != 'undefined'}}
-	{{html Kendra.service.buildQueryMappingTypes(Kendra.util.dataTypeForKey(op1), op2 || null)}}
+	{{html Kendra.service.buildQueryMappingTypes(Kendra.util.dataTypeForKey(op1), (op2 || null))}}
 	{{else}}
-	{{html Kendra.service.buildQueryMappingTypes('default', op2 || null)}}
+	{{html Kendra.service.buildQueryMappingTypes(null, (op2 || null))}}
 	{{/if}}
 	</select>
 </td>
