added support for "debug" parameter

--- a/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
@@ -113,6 +113,13 @@
 	<option value="true" selected="selected">true</option>
 	<option value="false">false</option>
 </select></div>
+<div class="field"><label for="debug">debug</label> <select
+	name="debug" id="debug">
+	<option value="timing" selected="selected">timing</option>
+	<option value="query">query</option>
+	<option value="results">results</option>
+	<option value="true">true</option>
+</select></div>
 <div class="field"><label for="qt">qt</label> <select name="qt"
 	id="qt">
 	<option value="edismax" selected="selected">edismax</option>
