changed references from kendra.org.uk => kendra.org

--- a/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
+++ b/profiles/kendra_signpost/modules/features/kendra_search/tests/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Solr query tester</title>
 
-<base href="http://dev.signpost.kendra.org.uk/" />
+<base href="http://dev.trial.signpost.kendra.org/" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
